# foundary

./: .env.example  .gitignore  README.md  cli.py  mcp_server.py  pyproject.toml
agents/: __init__.py  architecture.py  roadmap.py  vision.py  work_orders.py
app/: __init__.py  ingest.py  projects.py  state.py
docs/: 00-vision.md  01-principles.md  02-architecture.md  03-roadmap.md  04-work-orders.md  05-progress.md  06-decisions.md  07-agent-catalog.md  08-product-input-template.md
execution/: __init__.py  parse.py  sync.py
projects/ai-investment-firm/: 00-vision.md  01-architecture.md  02-roadmap.md  03-work-orders.md  product-input.md
projects/foundry/: 00-vision.md  01-architecture.md  02-roadmap.md  03-work-orders.md  product-input.md
projects/simple-todo-app/: 00-vision.md  01-architecture.md  02-roadmap.md  03-work-orders.md  product-input.md
services/: __init__.py  artifacts.py  config.py  github.py  llm.py  product_input.py  templates.py
skills/: README.md  build_references.py
skills/foundry-spec/: SKILL.md
skills/foundry-spec/references/: authoring-rules.md  templates.md
templates/: architecture.md  product-input.md  roadmap.md  vision.md  work-orders.md
tests/: test_app_fingerprint.py  test_app_ingest.py  test_app_projects.py  test_app_state.py  test_architecture_agent.py  test_artifacts.py  test_chain_workflow.py  test_cli_submit.py  test_config.py  test_execution_parse.py  test_execution_sync.py  test_llm.py  test_loop_e2e.py  test_mcp_wiring.py  test_product_input.py  test_roadmap_agent.py  test_skill_references.py  test_templates.py  test_vision_agent.py  test_work_orders_agent.py
workflows/: __init__.py  chain.py
