[project]
name = "foundry"
version = "0.2.0"
description = "AI CTO Office — turns a Product Input into coherent direction artifacts."
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "pydantic>=2.6",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
foundry = "cli:main"
foundry-mcp = "mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["services", "agents", "workflows", "execution", "app"]

# Top-level entry-point modules placed at the wheel root so they are importable
# (the console scripts reference `cli:main` / `mcp_server:main`).
[tool.hatch.build.targets.wheel.force-include]
"cli.py" = "cli.py"
"mcp_server.py" = "mcp_server.py"
# Artifact templates are loaded at runtime (and at import time by
# services.product_input). Ship them at the wheel root so the loader's path
# (site-packages/templates/) resolves in an installed environment.
"templates" = "templates"

[tool.pytest.ini_options]
testpaths = ["tests"]
